Bug 339732 - Notifications are sometimes misplaced
Summary: Notifications are sometimes misplaced
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-06 19:45 UTC by Antonio Rojas
Modified: 2015-01-14 08:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-10-06 19:45:58 UTC
After running plasmashell for a while, notifications start being misplaced. They appear where the second notification would be if there were two notifications. Restarting plasmashell fixed this.

Reproducible: Always
Comment 1 Martin Klapetek 2014-10-07 15:14:47 UTC
Thanks for the report, I've never seen that nor got any other reports.

Do you think you could get together steps to reproduce it reliably or does it "just happen"?
Comment 2 Antonio Rojas 2014-10-08 11:44:29 UTC
I didn't find a way to consistently reproduce it, but I've seen it a few times already. I have logon notifications turned on in kopete, so I get a lot of them and sometimes a few ones simultaneously.
Comment 3 Aleix Pol 2014-11-24 16:34:16 UTC
Bump?
Comment 4 Martin Klapetek 2014-12-03 17:19:51 UTC
Ok I managed to write a script that makes the notifications indeed be positioned badly in some situations, I'll look into it.
Comment 5 Martin Klapetek 2015-01-07 13:43:13 UTC
Git commit 0db103a429036a628be98600eee91afd1a3ae64e by Martin Klapetek.
Committed on 07/01/2015 at 13:43.
Pushed by mklapetek into branch 'master'.

Rework Plasma's notification positioning code

This should prevent popups randomly positioning over each other and
should improve the animated movement
REVIEW: 121360

M  +3    -1    applets/notifications/package/contents/ui/NotificationPopup.qml
M  +167  -63   applets/notifications/plugin/notificationshelper.cpp
M  +11   -3    applets/notifications/plugin/notificationshelper.h
M  +2    -0    dataengines/notifications/notificationsengine.cpp

http://commits.kde.org/plasma-workspace/0db103a429036a628be98600eee91afd1a3ae64e
Comment 6 enoopt.adams 2015-01-08 00:32:29 UTC
There seems to be a regression that came along with the patch above. See bug 342605.
Comment 7 Antonio Rojas 2015-01-14 08:30:50 UTC
I confirm that this is still happening in 5.2 beta. Not reopening since the discussion seems to have moved to bug 342605