Rework Plasma's notification positioning code

This should prevent popups randomly positioning over each other and
should improve the animated movement

BUG: 339732
REVIEW: 121360